--- a/style/style.css
+++ b/style/style.css
@@ -3,7 +3,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
 }
 body{
     width: 100vw;
@@ -11,11 +10,6 @@ body{
     font-family: "Fira Sans", serif;
     background: #F5F5F5;
 }
-/* .fira-sans-bold {
-    font-family: "Fira Sans", serif;
-    font-weight: 700;
-    font-style: normal;
-  } */
 .container{
     width: 85%;
     margin: 50px auto;
@@ -27,7 +21,6 @@ header nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    
 }
 header nav h3{
     font-weight: 800;
@@ -112,7 +105,6 @@ p{
     padding: 25px;
     margin: 15px 0;  
 }
-
 .vision-card-container{
     display: flex;
     align-items: center;
@@ -153,6 +145,8 @@ p{
 }
 .quote{
     background: #fff;
+    background-image: url(../assets/quote-bg.png);
+    background-repeat: no-repeat;
     padding: 15px;
     border-radius: 16px;
     margin: 10px 0 20px 0;
@@ -160,8 +154,9 @@ p{
 .yunus-deg{
     font-size: 12px;
 }
-.opinin-table{
+.opinion{
     background: #fff;
-    padding: 16px;
+    height: 300px
+    
 }
 
