--- a/style/style.css
+++ b/style/style.css
@@ -86,6 +86,7 @@ h3{
 p{
     font-size: 16px;
     margin: 10px 0;
+    color: #565656;
 }
 .pillar{
     margin: 20px 0;
@@ -126,7 +127,7 @@ p{
 .vision-card-3{
     background: #f2f553;
 }
-.vision-card button{
+.vision-card button, .btn{
     padding: 12px 20px;
     border-radius: 12px;
     border: none;
@@ -137,7 +138,7 @@ p{
 .vision-card-1:hover{
     background: #c7abab;
 }
-.vision-card-2:hover{
+.vision-card-2,button:hover{
     background: #b68dc2;
 }
 .vision-card-3:hover{
@@ -156,7 +157,93 @@ p{
 }
 .opinion{
     background: #fff;
-    height: 300px
+    height: 300px;
+    border-radius: 10px;
+    padding: 2px 0 0 20px;
+}
+.news1-container{
+    background: #fff;
+    padding: 20px;
+    border-radius: 12px;
+    margin-top: 25px;
+}
+.news1{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     
 }
+.news-photo img{
+    width: 300px;
+    margin: 10px;
+    border-radius: 12px;
+}
+.content{
+    margin: 10px;
 
+}
+.content h3{
+    color: #3e3e3e;
+}
+.content img{
+    margin: 5px 0;
+    height: 28px;
+}
+.donate{
+    text-align: center;
+    padding: 25px;
+}
+.donate p{
+    font-size: 14px;
+    margin-bottom: 15px;
+}
+.amount-btn{
+    padding: 10px;
+    margin: 20px 0;
+    display: flex;
+    align-items: center;
+    justify-content:center;
+}
+.amount-btn button{
+    padding: 25px 40px;
+    border-radius: 12px;
+    margin: 0 40px;
+    border: none;
+    background: #fff;
+    font-weight: 800;
+    font-size: 20px;
+    color: #565656;
+    transition: all 0.4s;
+}
+.amount-btn button:hover{
+    background: #dad4d4;
+}
+.other{
+    width: 70%;
+    padding: 12px 20px;
+    background: #fff;
+    border-radius: 10px;
+    border: none;
+    font-weight: 600;
+    margin-bottom: 15px;
+}
+.subscription{
+    text-align: center;
+    background: #c6e4d6;
+    padding: 20px 30px 30px 30px;
+}
+.subscription button{
+    margin: 16px 0;
+    width: 50%;
+    padding: 10px;
+    border-radius: 8px;
+    border: none;
+}
+.subscription button input{
+    width: 85%;
+    border: none;
+    padding: 10px;
+}
+.promis{
+    font-size: 12px;
+}
